Wed Sep 29 15:33:29 2004  Steve Huston  <shuston@riverace.com>

	* asnmp/sagent.cpp:
	* agent/snmp_agent.cpp:
	* examples/get/get.cpp:
	* examples/get/get_async.cpp:
	* examples/next/next.cpp:
	* examples/set/set.cpp:
	* examples/trap/trap.cpp:
	* examples/walk/walk.cpp:
	* tests/test_config.h:
	* tests/Address_Test.cpp:
	* tests/Counter64_Test.cpp:
	* tests/Counter_Test.cpp:
	* tests/Gauge_Test.cpp:
	* tests/Integer_Test.cpp:
	* tests/Octet_Test.cpp:
	* tests/Oid_Test.cpp:
	* tests/Target_Test.cpp:
	* tests/Varbind_Test.cpp: Adjustments to build with wide-char.

Fri Aug  6 08:14:12 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* asnmp/transaction.{h,cpp}: Added a get_handle() call to
	  session.  Thanks to Geo Sebastian <geosebastian@onmobile.com>
 	  for this fix.

Fri May  7 14:42:22 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Counter_Test.cpp (TestCounter):
	* tests/Gauge_Test.cpp (TestGuage):
	* tests/Integer_Test.cpp (TestUnsignedInteger32):

	  More "comparison between signed and unsigned integer"
	  warning fixes.

Thu May  6 11:03:26 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Counter_Test.cpp (TestCounter):
	* tests/Counter64_Test.cpp (TestCounter64):
	* tests/Gauge_Test.cpp (TestGuage):
	* tests/Integer_Test.cpp (TestUnsignedInteger32):

	  Fixed "comparison between signed and unsigned integer"
	  warnings.

Mon Apr 26 18:37:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/get/get.cpp:
        * examples/get/get_async.cpp:
        * examples/next/next.cpp:
        * examples/set/set.cpp:
        * examples/trap/trap.cpp:
        * examples/walk/walk.cpp:
          Don't use deprecated methods of ACE_Get_Opt and ACE_Reactor

Mon Apr 26 15:14:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/trap/purify4.1.txt:
          Removed this file, it contains purify results and shouldn't
          belong in the repo.
