@@ -36,6 +36,7 @@
 #include "asnmp/snmp.h"
 #define DEFINE_TRAP_CONSTANTS_
 #include "asnmp/enttraps.h" // enterprise standard traps
+#include "ace/Argv_Type_Converter.h"
 #include "ace/Get_Opt.h"
 
 // FUZZ: disable check_for_streams_include
